test/Fail/Issue6349-1.agda
@0 A : Setâ‚
A = Set
