test/Fail/Issue6349-1.err
Issue6349-1.agda:1.1-3: error: [AttributeKindNotEnabled]
Erasure attributes have not been enabled (use --erasure to enable
them): 0
